--- a/configuration/templates/volunteering/certificate/object-body-individual.hbs
+++ b/configuration/templates/volunteering/certificate/object-body-individual.hbs
@@ -14,6 +14,7 @@
       {{{json key='hours_verified' value=0}}}
       {{/compare ~}}
     {{/json ~}},
+    {{{json key='award_level' value=award_level}}},
     {{{json key='organisation_name_1' value=organisation_name_1}}},
     {{{json key='description_1' value=description_1}}},
     {{{json key='testimonial_1' value=testimonial_1}}},
