--- a/configuration/templates/volunteering/profile.hbs
+++ b/configuration/templates/volunteering/profile.hbs
@@ -18,7 +18,7 @@
   <p class="empty-title h5">
     {{type_name}}: {{certificate_name}} hours
   </p>
-  {{> badge hours=hours}}
+  {{> badge api_name=api_name}}
   {{/compare ~}}
   {{/each ~}}
   {{/if ~}}
