--- a/configuration/templates/pages/home-not-authenticated.hbs
+++ b/configuration/templates/pages/home-not-authenticated.hbs
@@ -22,7 +22,7 @@
   </p>
   <div class="columns certificates">
     <div class="column col-sm-6 col-3 certificate text-centre">
-      {{> badge hours=0}}
+      {{> badge api_name="Challenge"}}
       <h4 class="t-margin-full">
         The Challenge
       </h4>
@@ -31,7 +31,7 @@
       </p>
     </div>
     <div class="column col-sm-6 col-3 certificate text-centre">
-      {{> badge hours=10}}
+      {{> badge api_name="10"}}
       <h4 class="t-margin-full">
         The Approach
       </h4>
@@ -40,7 +40,7 @@
       </p>
     </div>
     <div class="column col-sm-6 col-3 certificate text-centre">
-      {{> badge hours=50}}
+      {{> badge api_name="50"}}
       <h4 class="t-margin-full">
         The Ascent
       </h4>
@@ -49,7 +49,7 @@
       </p>
     </div>
     <div class="column col-sm-6 col-3 certificate text-centre">
-      {{> badge hours=1}}
+      {{> badge api_name="Summit"}}
       <h4 class="t-margin-full">
         The Summit
       </h4>
