--- a/configuration/templates/volunteering/certificate/object-body-admin.hbs
+++ b/configuration/templates/volunteering/certificate/object-body-admin.hbs
@@ -1,60 +1,34 @@
-{{#each (filter @root.data.tasksInfo "task_id" "===" @root.request.params.task_id)}}
-  {{#json type='array'}}
-    {{#if @root.request.params.hours_id}}
-      {{#eachJoin (filter hours_list "hours_id" "===" @root.request.params.hours_id) ","}}
-        {{#json}}
-          {{{json key='type' value='group'}}},
-          {{#json key='user'}}
-            {{{json key='first_name' value=claim_first_name}}},
-            {{{json key='last_name' value=claim_last_name}}},
-            {{{json key='claim_code' value=claim_code}}},
-            {{#ifAny (compare hours 0) (compare hours 1) ~}}
-            {{#compare hours 0 ~}}
-            {{{json key='certificate_type' value="challenge"}}},
-            {{/compare ~}}
-            {{#compare hours 1 ~}}
-            {{{json key='certificate_type' value="summit"}}},
-            {{/compare ~}}
-            {{{json key='hours_verified' value=0}}}
-            {{else}}
-            {{{json key='certificate_type' value="hours"}}},
-            {{{json key='hours_verified' value=hours}}}
-            {{/ifAny ~}}
-          {{/json}},
-          {{{json key='sdgs' value=../this.un_sustainable_development_goals}}},
-          {{#json type='array' key='tasks'}}
-            {{{jsStringify ../this}}},
-          {{/json}}
-        {{/json}}
-      {{/eachJoin}}
-    {{else}}
-      {{#eachJoin hours_list ","}}
-        {{#json}}
-          {{{json key='type' value='group'}}},
-          {{#json key='user'}}
-            {{{json key='first_name' value=claim_first_name}}},
-            {{{json key='last_name' value=claim_last_name}}},
-            {{{json key='claim_code' value=claim_code}}},
-            {{{json key='hours_verified' value=hours}}},
-            {{#ifAny (compare hours 0) (compare hours 1) ~}}
-            {{#compare hours 0 ~}}
-            {{{json key='certificate_type' value="challenge"}}},
-            {{/compare ~}}
-            {{#compare hours 1 ~}}
-            {{{json key='certificate_type' value="summit"}}},
-            {{/compare ~}}
-            {{{json key='hours_verified' value=0}}}
-            {{else}}
-            {{{json key='certificate_type' value="hours"}}},
-            {{{json key='hours_verified' value=hours}}}
-            {{/ifAny ~}}
-          {{/json}},
-          {{{json key='sdgs' value=../this.un_sustainable_development_goals}}},
-          {{#json type='array' key='tasks'}}
-            {{{jsStringify ../this}}},
-          {{/json}}
-        {{/json}}
-      {{/eachJoin}}
-    {{/if}}
-  {{/json}}
- {{/each}}
+{{#each (filter @root.data.tasksInfo "task_id" "===" @root.request.params.task_id) ~}}
+  {{#json type='array' ~}}
+    {{#each awards_list ~}}
+      {{#json ~}}
+        {{{json key='type' value='group'}}},
+        {{#json key='user' ~}}
+          {{{json key='first_name' value=@root.data.accountInfo.first_name}}},
+          {{{json key='last_name' value=@root.data.accountInfo.last_name}}},
+          {{#compare award_level_numerical_value ">" 0 ~}}
+          {{{json key='certificate_type' value="hours"}}},
+          {{{json key='hours_verified' value=award_level_numerical_value}}}
+          {{else}}
+          {{{json key='certificate_type' value=award_level}}},
+          {{{json key='hours_verified' value=0}}}
+          {{/compare ~}}
+        {{/json ~}},
+        {{{json key='award_level' value=award_level}}},
+        {{{json key='organisation_name_1' value=organisation_name_1}}},
+        {{{json key='description_1' value=description_1}}},
+        {{{json key='testimonial_1' value=testimonial_1}}},
+        {{{json key='organisation_name_2' value=organisation_name_2}}},
+        {{{json key='description_2' value=description_2}}},
+        {{{json key='testimonial_2' value=testimonial_2}}},
+        {{{json key='organisation_name_3' value=organisation_name_3}}},
+        {{{json key='description_3' value=description_3}}},
+        {{{json key='testimonial_3' value=testimonial_3}}},
+        {{{json key='sdgs' value=un_sustainable_development_goals}}},
+        {{{json key='claim_code' value=claim_code}}},
+        {{{json key='group_award_claimed' value=group_award_claimed}}},
+        {{{json key='extra_organisations' value=extra_organisations}}}
+      {{/json ~}}
+    {{/each ~}}
+  {{/json ~}}
+ {{/each ~}}
