--- a/configuration/templates/volunteering/certificate/object-body-admin.hbs
+++ b/configuration/templates/volunteering/certificate/object-body-admin.hbs
@@ -1,34 +1,67 @@
 {{#each (filter @root.data.tasksInfo "task_id" "===" @root.request.params.task_id) ~}}
   {{#json type='array' ~}}
-    {{#each awards_list ~}}
-      {{#json ~}}
-        {{{json key='type' value='group'}}},
-        {{#json key='user' ~}}
-          {{{json key='first_name' value=@root.data.accountInfo.first_name}}},
-          {{{json key='last_name' value=@root.data.accountInfo.last_name}}},
-          {{#compare award_level_numerical_value ">" 0 ~}}
-          {{{json key='certificate_type' value="hours"}}},
-          {{{json key='hours_verified' value=award_level_numerical_value}}}
-          {{else}}
-          {{{json key='certificate_type' value=award_level}}},
-          {{{json key='hours_verified' value=0}}}
-          {{/compare ~}}
-        {{/json ~}},
-        {{{json key='award_level' value=award_level}}},
-        {{{json key='organisation_name_1' value=organisation_name_1}}},
-        {{{json key='description_1' value=description_1}}},
-        {{{json key='testimonial_1' value=testimonial_1}}},
-        {{{json key='organisation_name_2' value=organisation_name_2}}},
-        {{{json key='description_2' value=description_2}}},
-        {{{json key='testimonial_2' value=testimonial_2}}},
-        {{{json key='organisation_name_3' value=organisation_name_3}}},
-        {{{json key='description_3' value=description_3}}},
-        {{{json key='testimonial_3' value=testimonial_3}}},
-        {{{json key='sdgs' value=un_sustainable_development_goals}}},
-        {{{json key='claim_code' value=claim_code}}},
-        {{{json key='group_award_claimed' value=group_award_claimed}}},
-        {{{json key='extra_organisations' value=extra_organisations}}}
-      {{/json ~}}
-    {{/each ~}}
+    {{#if @root.request.params.award_id ~}}
+      {{#each (filter awards_list "award_id" "===" @root.request.params.award_id) ~}}
+        {{#json ~}}
+          {{{json key='type' value='group'}}},
+          {{#json key='user' ~}}
+            {{{json key='first_name' value=recipient_first_name}}},
+            {{{json key='last_name' value=recipient_last_name}}},
+            {{#compare award_level_numerical_value ">" 0 ~}}
+            {{{json key='certificate_type' value="hours"}}},
+            {{{json key='hours_verified' value=award_level_numerical_value}}}
+            {{else}}
+            {{{json key='certificate_type' value=award_level}}},
+            {{{json key='hours_verified' value=0}}}
+            {{/compare ~}}
+          {{/json ~}},
+          {{{json key='award_level' value=award_level}}},
+          {{{json key='organisation_name_1' value=organisation_name_1}}},
+          {{{json key='description_1' value=description_1}}},
+          {{{json key='testimonial_1' value=testimonial_1}}},
+          {{{json key='organisation_name_2' value=organisation_name_2}}},
+          {{{json key='description_2' value=description_2}}},
+          {{{json key='testimonial_2' value=testimonial_2}}},
+          {{{json key='organisation_name_3' value=organisation_name_3}}},
+          {{{json key='description_3' value=description_3}}},
+          {{{json key='testimonial_3' value=testimonial_3}}},
+          {{{json key='sdgs' value=un_sustainable_development_goals}}},
+          {{{json key='claim_code' value=claim_code}}},
+          {{{json key='group_award_claimed' value=group_award_claimed}}},
+          {{{json key='extra_organisations' value=extra_organisations}}}
+        {{/json ~}}
+      {{/each ~}}
+    {{else}}
+      {{#each awards_list ~}}
+        {{#json ~}}
+          {{{json key='type' value='group'}}},
+          {{#json key='user' ~}}
+            {{{json key='first_name' value=recipient_first_name}}},
+            {{{json key='last_name' value=recipient_last_name}}},
+            {{#compare award_level_numerical_value ">" 0 ~}}
+            {{{json key='certificate_type' value="hours"}}},
+            {{{json key='hours_verified' value=award_level_numerical_value}}}
+            {{else}}
+            {{{json key='certificate_type' value=award_level}}},
+            {{{json key='hours_verified' value=0}}}
+            {{/compare ~}}
+          {{/json ~}},
+          {{{json key='award_level' value=award_level}}},
+          {{{json key='organisation_name_1' value=organisation_name_1}}},
+          {{{json key='description_1' value=description_1}}},
+          {{{json key='testimonial_1' value=testimonial_1}}},
+          {{{json key='organisation_name_2' value=organisation_name_2}}},
+          {{{json key='description_2' value=description_2}}},
+          {{{json key='testimonial_2' value=testimonial_2}}},
+          {{{json key='organisation_name_3' value=organisation_name_3}}},
+          {{{json key='description_3' value=description_3}}},
+          {{{json key='testimonial_3' value=testimonial_3}}},
+          {{{json key='sdgs' value=un_sustainable_development_goals}}},
+          {{{json key='claim_code' value=claim_code}}},
+          {{{json key='group_award_claimed' value=group_award_claimed}}},
+          {{{json key='extra_organisations' value=extra_organisations}}}
+        {{/json ~}}
+      {{/each ~}}
+    {{/if ~}}
   {{/json ~}}
  {{/each ~}}
