group certs fixes

--- a/configuration/templates/volunteering/admin-group.hbs
+++ b/configuration/templates/volunteering/admin-group.hbs
@@ -91,7 +91,7 @@
             </div>
             <div class="column col-1 hide-xl"></div>
             <div class="column col-2 col-xl-3 col-lg-4 col-md-6 col-sm-8 col-xs-9">
-              <a href="/group-certificate/{{task_id}}/{{organisation_name_1}}.pdf" class="btn btn-primary btn-block b-margin">Download all</a>
+              <a href="/group-certificate/{{task_id}}" class="btn btn-primary btn-block b-margin">Download all</a>
             </div>
           </div>
 
