--- a/configuration/templates/volunteering/admin-group.hbs
+++ b/configuration/templates/volunteering/admin-group.hbs
@@ -289,27 +289,30 @@
                   <textarea rows="6" cols="30" maxlength="700" id="volunteers" pattern=".*\S.*" name="volunteers" class="form-input" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.task_description}}>{{@root.data.taskInfo.task_description}}</textarea>
                 </div>
               </div>
-              <div class="col-2">
-                <div class="form-group b-margin">
-                  <select class="form-select" required id="award" name="award" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.award}}>
-                    {{#each @root.context.metaData.certificates ~}}
-                      {{#unless tsi_only ~}}
-                        <option value="{{api_name}}"{{#compare api_name ../api_name}} selected{{/compare}}>
-                          {{#ifAny (compare type "approach") (compare type "ascent") ~}}
-                            {{type_name}}: {{hours}} hours
-                          {{else}}
-                            {{type_name}}
-                          {{/ifAny ~}}
-                        </option>
-                      {{else}}
-                        {{#if @root.data.accountInfo.summit_certificate_permission ~}}
-                        <option value="{{api_name}}">
-                          {{type_name}}
-                        </option>
-                        {{/if ~}}
-                      {{/unless ~}}
-                    {{/each ~}}
-                  </select>
+              <div class="form-group">
+                <div class="col-4">Certificate to award</div>
+                <div class="col-2">
+                  <div class="form-group b-margin">
+                    <select class="form-select" required id="award" name="award" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.award}}>
+                      {{#each @root.context.metaData.certificates ~}}
+                        {{#unless tsi_only ~}}
+                          <option value="{{api_name}}"{{#compare api_name ../api_name}} selected{{/compare}}>
+                            {{#ifAny (compare type "approach") (compare type "ascent") ~}}
+                              {{type_name}}: {{hours}} hours
+                            {{else}}
+                              {{type_name}}
+                            {{/ifAny ~}}
+                          </option>
+                        {{else}}
+                          {{#if @root.data.accountInfo.summit_certificate_permission ~}}
+                            <option value="{{api_name}}">
+                              {{type_name}}
+                            </option>
+                          {{/if ~}}
+                        {{/unless ~}}
+                      {{/each ~}}
+                    </select>
+                  </div>
                 </div>
               </div>
               <div class="form-group">
