--- a/src/main.scss
+++ b/src/main.scss
@@ -975,6 +975,10 @@ ul.fa-ul {
   color: white !important;
 }
 
+.modal-form {
+  overflow-y: auto;
+}
+
 .table th,
 .table td {
   border-bottom-width: 1px;
