--- a/configuration/partials/emails/award-authorize-body.html
+++ b/configuration/partials/emails/award-authorize-body.html
@@ -198,17 +198,11 @@
                                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                         <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#16204e;">
                                           <p><strong>This is a test from the new Saltire Awards service in development</strong></p>
-                                          <p> Hello, </p>
+                                          <p>Hello,</p>
                                           <p>
                                             {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}}
-                                            {{#if @root.data.accountInfo.school_college_name}}from {{@root.data.accountInfo.school_college_name}}{{/if}} has requested a printed certificate for their Saltire Award. </p>
-                                          <p> The certificate can be <a href="{{@root.data.accountInfo.certificate_url}}">viewed, downloaded, or printed</a>. </p>
-                                          <p> The certificate should be sent to: </p>
-                                          <address>
-                                            <strong>{{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}}<br />
-                                              {{@root.request.body.address_value}}<br />
-                                              {{@root.data.accountInfo.postcode}}</strong>
-                                          </address>
+                                            {{#if @root.data.accountInfo.school_college_name}}from {{@root.data.accountInfo.school_college_name}}{{/if}} is applying for a {{@root.context.metaData.certificateName}} {{@root.data.verifyInfoBody.hours_verify_award}} Award. This requires TSI Authorization to be awarded. </p>
+                                          <p> Please check Salesforce hours records for this user, and set the TSI Award Authorization level to {{@root.data.verifyInfoBody.hours_verify_award}} if you wish this award to be authorized. </p>
                                         </div>
                                       </td>
                                     </tr>
