--- a/configuration/partials/emails/hours-verify-tsi-email-body.html
+++ b/configuration/partials/emails/hours-verify-tsi-email-body.html
@@ -64,6 +64,15 @@
     }
   </style>
   <style type="text/css">
+    @media only screen and (max-width:480px) {
+      table.full-width-mobile {
+        width: 100% !important;
+      }
+
+      td.full-width-mobile {
+        width: auto !important;
+      }
+    }
   </style>
 </head>
 
@@ -95,8 +104,8 @@
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
       <![endif]-->
-              <div style="background:#ffffff;background-color:#ffffff;margin:0px auto;max-width:580px;">
-                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#ffffff;background-color:#ffffff;width:100%;">
+              <div style="background:{{@root.context.metaData.theme.primary}};background-color:{{@root.context.metaData.theme.primary}};margin:0px auto;max-width:580px;">
+                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:{{@root.context.metaData.theme.primary}};background-color:{{@root.context.metaData.theme.primary}};width:100%;">
                   <tbody>
                     <tr>
                       <td style="direction:ltr;font-size:0px;padding:10px;text-align:center;">
@@ -115,6 +124,19 @@
                               <tr>
                                 <td style="vertical-align:top;padding:0px;">
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
+                                    <tr>
+                                      <td align="center" style="font-size:0px;padding:0px;word-break:break-word;">
+                                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                                          <tbody>
+                                            <tr>
+                                              <td style="width:190px;">
+                                                <img height="auto" src="https://storage.googleapis.com/scvo-assets/saltireawards/saltire-awards-white.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="190" />
+                                              </td>
+                                            </tr>
+                                          </tbody>
+                                        </table>
+                                      </td>
+                                    </tr>
                                   </table>
                                 </td>
                               </tr>
@@ -174,18 +196,19 @@
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
                                     <tr>
                                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
-                                        <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#000000;">
+                                        <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#16204e;">
                                           <p><strong>This is a test from the new Saltire Awards service in development</strong></p>
-                                          <p>Dear Sir or Madam,</p>
-                                          <p>{{#if (compare @root.request.params.query.action "===" "second_reminder")}}Second {{/if}}Reminder</p>
+                                          <p>
+                                            {{#if (compare @root.request.params.query.action "===" "second_reminder")}}Second {{/if}}Reminder </p>
+                                          <p> Hello, </p>
                                           <p>
                                             {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}}
                                             {{#if @root.data.accountInfo.school_college_name}}from {{@root.data.accountInfo.school_college_name}}{{/if}} applied for a {{@root.context.metaData.certificateName}} for the volunteering tasks listed below. Unfortunately the maximum time has elapsed without {{@root.data.accountInfo.first_name}}'s hours being verified. Please could you check the hours below and confirm or edit them using the links below, or alternatively update the details on Milo. </p>
-                                          {{#each @root.data.tasksInfoUnverified}}
-                                            {{#compare unverified_hours_list.length ">=" 1}}
-                                              <h4><strong>Volunteering</strong> for <strong>{{organisation_name}}</strong> </h4>
+                                          {{#each @root.data.tasksInfoUnverified ~}}
+                                            {{#compare unverified_hours_list.length ">=" 1 ~}}
+                                              <h4><strong>Volunteering</strong> for <strong>{{organisation_name}}</strong></h4>
                                               <ul>
-                                                <li>Manager: <ul>
+                                                <li> Manager: <ul>
                                                     <li>Name: {{volunteer_manager_first_name}} {{volunteer_manager_last_name}}
                                                     <li>Role: {{volunteer_manager_title}}
                                                       {{#if volunteer_manager_email}}
@@ -195,17 +218,16 @@
                                                     {{/if}}
                                                   </ul>
                                                 </li>
-                                                <li>Hours: <ul>
+                                                <li> Hours: <ul>
                                                     {{#each this.unverified_hours_list}}
                                                       <li>{{hours}} - logged on: {{momentFormat (moment createdDate "YYYY-MM-DD") "MMMM Do YYYY"}}</li>
                                                     {{/each}}
                                                   </ul>
                                                 </li>
                                               </ul>
-                                            {{/compare}}
-                                          {{/each}}
-                                          <p>You can now <a href="{{@root.context.metaData.url}}/verify-hours/?t={{>account_list_tasks}}&c={{@root.data.accountInfo.hours_verify_code}}&user_id={{@root.data.accountInfo.external_id}}">confirm that these hours are correct</a> <a href="{{@root.context.metaData.url}}/query-hours/?t={{>account_list_tasks}}&c={{@root.data.accountInfo.hours_verify_code}}&user_id={{@root.data.accountInfo.external_id}}">make corrections</a>.</p>
-                                          <p>This email was automatically generated by the <a href="{{@root.context.metaData.url}}" title="{{@root.context.metaData.title}}" target="_blank">{{@root.context.metaData.title}}</a> website</p>
+                                            {{/compare ~}}
+                                          {{/each ~}}
+                                          <p> You can now <a href="{{@root.context.metaData.url}}/verify-hours/?t={{>account_list_tasks}}&c={{@root.data.accountInfo.hours_verify_code}}&user_id={{@root.data.accountInfo.external_id}}">confirm that these hours are correct</a> <a href="{{@root.context.metaData.url}}/query-hours/?t={{>account_list_tasks}}&c={{@root.data.accountInfo.hours_verify_code}}&user_id={{@root.data.accountInfo.external_id}}">make corrections</a>. </p>
                                         </div>
                                       </td>
                                     </tr>
@@ -246,8 +268,8 @@
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
       <![endif]-->
-              <div style="background:#D7D3CC;background-color:#D7D3CC;margin:0px auto;max-width:580px;">
-                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#D7D3CC;background-color:#D7D3CC;width:100%;">
+              <div style="background:{{@root.context.metaData.theme.copyright}};background-color:{{@root.context.metaData.theme.copyright}};margin:0px auto;max-width:580px;">
+                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:{{@root.context.metaData.theme.copyright}};background-color:{{@root.context.metaData.theme.copyright}};width:100%;">
                   <tbody>
                     <tr>
                       <td style="direction:ltr;font-size:0px;padding:0px;text-align:center;">
@@ -268,9 +290,8 @@
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
                                     <tr>
                                       <td align="left" style="font-size:0px;padding:0px 0px 15px;word-break:break-word;">
-                                        <div style="font-family:Montserrat, helvetica, Arial, sans-serif;font-size:14px;line-height:1;text-align:left;color:#ffffff;">
-                                          <p style="margin:0px;">
-                                          </p>
+                                        <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:14px;line-height:1;text-align:left;color:#333E48;">
+                                          <p> This email was automatically generated by the <a href="{{@root.context.metaData.url}}" title="{{@root.context.metaData.title}}" target="_blank">{{@root.context.metaData.title}}</a> website. </p>
                                         </div>
                                       </td>
                                     </tr>
