--- a/configuration/partials/emails/parental-approval-body.html
+++ b/configuration/partials/emails/parental-approval-body.html
@@ -64,6 +64,15 @@
     }
   </style>
   <style type="text/css">
+    @media only screen and (max-width:480px) {
+      table.full-width-mobile {
+        width: 100% !important;
+      }
+
+      td.full-width-mobile {
+        width: auto !important;
+      }
+    }
   </style>
 </head>
 
@@ -95,8 +104,8 @@
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
       <![endif]-->
-              <div style="background:#ffffff;background-color:#ffffff;margin:0px auto;max-width:580px;">
-                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#ffffff;background-color:#ffffff;width:100%;">
+              <div style="background:{{@root.context.metaData.theme.primary}};background-color:{{@root.context.metaData.theme.primary}};margin:0px auto;max-width:580px;">
+                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:{{@root.context.metaData.theme.primary}};background-color:{{@root.context.metaData.theme.primary}};width:100%;">
                   <tbody>
                     <tr>
                       <td style="direction:ltr;font-size:0px;padding:10px;text-align:center;">
@@ -115,6 +124,19 @@
                               <tr>
                                 <td style="vertical-align:top;padding:0px;">
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
+                                    <tr>
+                                      <td align="center" style="font-size:0px;padding:0px;word-break:break-word;">
+                                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                                          <tbody>
+                                            <tr>
+                                              <td style="width:190px;">
+                                                <img height="auto" src="https://storage.googleapis.com/scvo-assets/saltireawards/saltire-awards-white.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="190" />
+                                              </td>
+                                            </tr>
+                                          </tbody>
+                                        </table>
+                                      </td>
+                                    </tr>
                                   </table>
                                 </td>
                               </tr>
@@ -174,17 +196,21 @@
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
                                     <tr>
                                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
-                                        <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#000000;">
+                                        <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#16204e;">
                                           <p><strong>This is a test from the new Saltire Awards service in development</strong></p>
-                                          <p>Hello,</p>
-                                          <p>This is a confirmation email from the {{@root.context.metaData.title}} website. {{first_name}} {{last_name}}, has named you as their parent or guardian.</p>
-                                          <p>{{@root.context.metaData.fullTitle}} are the Scottish Government’s way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.</p>
-                                          <p>As {{first_name}} is under 12, we require their parent or guardian to give permission to use the {{@root.context.metaData.title}} website. You can indicate that you give permission, by clicking on the link below</p>
-                                          <a href="{{approval_url}}" color="#42842A" style="color:#42842A;font-weight:bold;">I give permission for {{first_name}} {{last_name}} to use the {{@root.context.metaData.title}} website</a>
+                                          <p> Hello, </p>
+                                          <p> This is a confirmation email from the {{@root.context.metaData.title}} website. {{first_name}} {{last_name}}, has named you as their parent or guardian. </p>
+                                          <p>
+                                            {{@root.context.metaData.fullTitle}} are the Scottish Government’s way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland. </p>
+                                          <p> As {{first_name}} is under 13, we require their parent or guardian to give permission to use the {{@root.context.metaData.title}} website. You can indicate that you give permission, by clicking on the link below. </p>
+                                          <p>
+                                            <a href="{{approval_url}}" color="#42842A" style="color:#42842A;font-weight:bold;">I give permission for {{first_name}} {{last_name}} to use the {{@root.context.metaData.title}} website</a>
+                                          </p>
                                           <p><a href="{{@root.context.metaData.url}}/about">Find out more about the {{@root.context.metaData.title}}</a>.</p>
-                                          <p>Thank you</p>
-                                          <p>{{@root.context.metaData.title}}</p>
-                                          <p>This email was automatically generated by the <a href="{{@root.context.metaData.url}}" title="{{@root.context.metaData.title}}" target="_blank">{{@root.context.metaData.title}}</a> website</p>
+                                          <p> Thank you<br />
+                                            {{@root.context.metaData.title}}
+                                          </p>
+                                          <p> This email was automatically generated by the <a href="{{@root.context.metaData.url}}" title="{{@root.context.metaData.title}}" target="_blank">{{@root.context.metaData.title}}</a> website </p>
                                         </div>
                                       </td>
                                     </tr>
@@ -225,8 +251,8 @@
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
       <![endif]-->
-              <div style="background:#D7D3CC;background-color:#D7D3CC;margin:0px auto;max-width:580px;">
-                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#D7D3CC;background-color:#D7D3CC;width:100%;">
+              <div style="background:{{@root.context.metaData.theme.copyright}};background-color:{{@root.context.metaData.theme.copyright}};margin:0px auto;max-width:580px;">
+                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:{{@root.context.metaData.theme.copyright}};background-color:{{@root.context.metaData.theme.copyright}};width:100%;">
                   <tbody>
                     <tr>
                       <td style="direction:ltr;font-size:0px;padding:0px;text-align:center;">
@@ -247,9 +273,8 @@
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
                                     <tr>
                                       <td align="left" style="font-size:0px;padding:0px 0px 15px;word-break:break-word;">
-                                        <div style="font-family:Montserrat, helvetica, Arial, sans-serif;font-size:14px;line-height:1;text-align:left;color:#ffffff;">
-                                          <p style="margin:0px;">
-                                          </p>
+                                        <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:14px;line-height:1;text-align:left;color:#333E48;">
+                                          <p> This email was automatically generated by the <a href="{{@root.context.metaData.url}}" title="{{@root.context.metaData.title}}" target="_blank">{{@root.context.metaData.title}}</a> website. </p>
                                         </div>
                                       </td>
                                     </tr>
